<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/workDurationTab"
    android:layout_width="match_parent"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_height="100dp"
    android:animateLayoutChanges="true"
    android:background="@drawable/component_rectangle"
    android:gravity="center"
    android:layout_marginTop="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.488"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/weekDaysButton">

    <Button
        android:id="@+id/workFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/orange"
        android:text="@string/from"
        android:textColor="@color/tabBackground"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/workTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_toEndOf="@+id/workFrom"
        android:backgroundTint="@color/orange"
        android:text="@string/to"
        android:textColor="@color/tabBackground"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/workFromText"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/workFrom"
        android:text="@string/_09_00"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/workToText"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/workTo"
        android:layout_alignStart="@+id/workTo"
        android:text="@string/_15_00"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-15dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/workFrom"
        app:srcCompat="@drawable/ic_work_timetable_svgrepo_com" />
</RelativeLayout>
