<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/newBackground">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/takeABreak"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:backgroundTint="@color/orangeBackground"
            android:drawableStart="@drawable/ic_baseline_free_breakfast_dialog"
            android:text="@string/take_a_break"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/snooze"
            android:layout_alignBottom="@+id/continueWorking"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:drawableStart="@drawable/ic_baseline_snooze_dialog"
            android:text="@string/snooze"

            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.legacy.widget.Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <Button

            android:layout_toEndOf="@+id/snooze"
            android:id="@+id/continueWorking"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:drawableStart="@drawable/ic_baseline_work_dialog"
            android:text="@string/continue_working"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

        <Button
            android:id="@+id/cancelTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_timer"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
