<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/workDurationTab"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:layout_margin="10dp"
    android:layout_alignBottom="@+id/workSessionCountText"
    android:animateLayoutChanges="true"
    android:background="@drawable/component_rectangle"
    android:gravity="center">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="@drawable/component_rectangle"
    android:animateLayoutChanges="true"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:paddingTop="15dp"
        android:id="@+id/sessionCounterText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/work"
        android:textColor="@color/white"/>

    <TextView
        android:paddingTop="15dp"
        android:id="@+id/sessionCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_toStartOf="@+id/divider"
        android:visibility="visible"
        android:textStyle="bold"
        android:text="@string/_0"
        android:layout_marginEnd="15dp"
        android:textColor="@color/orange"/>

    <TextView
        android:paddingTop="15dp"
        android:layout_marginStart="15dp"
        android:id="@+id/sessionCounterBreak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:visibility="visible"
        android:layout_toEndOf="@+id/divider"
        android:textColor="@color/orange"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:paddingTop="15dp"
        android:id="@+id/sessionCounterBreakText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/_break"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"/>

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_centerInParent="true"
        android:layout_height="match_parent"
        android:background="@color/grey" />


</RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
